<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.um_project_game</groupId>
 <artifactId>um-project-game</artifactId>
 <packaging>jar</packaging>
 <version>1.0-SNAPSHOT</version>
 <name>um_project_game</name>
 <url>https://maven.apache.org</url>
 <properties>
 <main.class>com.um_project_game.Launcher</main.class>
 <app.version>1.0.0</app.version>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <junit.version>5.10.0</junit.version>
  <joml.version>1.10.5</joml.version>
  <joml-primitives.version>1.10.0</joml-primitives.version>
  <maven.compiler.source>22</maven.compiler.source>
  <maven.compiler.target>22</maven.compiler.target>
 </properties>
 <dependencies>
  <dependency>
   <groupId>org.junit.jupiter</groupId>
   <artifactId>junit-jupiter-api</artifactId>
   <version>${junit.version}</version>
   <scope>test</scope>
  </dependency>
  <dependency>
   <groupId>org.jetbrains</groupId>
   <artifactId>annotations</artifactId>
   <version>24.0.1</version>
   <scope>compile</scope>
  </dependency>
  <dependency>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-api</artifactId>
   <version>2.23.1</version>
  </dependency>
  <dependency>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-core</artifactId>
   <version>2.23.1</version>
  </dependency>
  <dependency>
   <groupId>org.joml</groupId>
   <artifactId>joml</artifactId>
   <version>${joml.version}</version>
  </dependency>
  <dependency>
   <groupId>org.joml</groupId>
   <artifactId>joml-primitives</artifactId>
   <version>${joml-primitives.version}</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-controls</artifactId>
   <version>22.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-fxml</artifactId>
   <version>22.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-web</artifactId>
   <version>22.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-swing</artifactId>
   <version>22.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-media</artifactId>
   <version>22.0.1</version>
  </dependency>
  <dependency>
   <groupId>org.controlsfx</groupId>
   <artifactId>controlsfx</artifactId>
   <version>11.2.1</version>
  </dependency>
  <dependency>
   <groupId>org.kordamp.ikonli</groupId>
   <artifactId>ikonli-javafx</artifactId>
   <version>12.3.1</version>
  </dependency>
  <dependency>
   <groupId>eu.hansolo</groupId>
   <artifactId>tilesfx</artifactId>
   <version>21.0.3</version>
  </dependency>
  <dependency>
   <groupId>com.github.almasb</groupId>
   <artifactId>fxgl</artifactId>
   <version>17.3</version>
  </dependency>
 </dependencies>
 <build>
  <plugins>
<!-- Maven Compiler Plugin -->
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.11.0</version>
    <configuration>
     <source>22</source>
     <target>22</target>
    </configuration>
   </plugin>
<!-- Maven Javadoc Plugin -->
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>3.4.0</version>
    <configuration>
     <failOnError>false</failOnError>
     <additionalJOptions>-Xdoclint:none</additionalJOptions>
    </configuration>
    <executions>
     <execution>
      <id>attach-javadocs</id>
      <phase>package</phase>
      <goals>
       <goal>jar</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
<!-- JavaFX Maven Plugin -->
   <plugin>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-maven-plugin</artifactId>
    <version>0.0.8</version>
    <configuration>
     <mainClass>${main.class}</mainClass>
    </configuration>
    </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-dependency-plugin</artifactId>
    <version>3.5.0</version>
    <executions>
        <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
                <goal>copy-dependencies</goal>
            </goals>
            <configuration>
                <outputDirectory>${project.build.directory}/mods</outputDirectory>
                <includeScope>runtime</includeScope>
            </configuration>
        </execution>
    </executions>
    </plugin>
    <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-antrun-plugin</artifactId>
    <version>1.8</version>
    <executions>
        <execution>
            <phase>validate</phase>
            <goals>
                <goal>run</goal>
            </goals>
            <configuration>
                <target>
                    <echo>project.build.outputDirectory: ${project.build.outputDirectory}</echo>
                    <echo>project.build.directory: ${project.build.directory}</echo>
                    <echo>java.home: ${java.home}</echo>
                </target>
            </configuration>
        </execution>
    </executions>
</plugin>
<!-- Exec Maven Plugin to run jpackage -->
<plugin>
    <groupId>org.codehaus.mojo</groupId>
    <artifactId>exec-maven-plugin</artifactId>
    <version>3.1.0</version>
    <executions>
        <execution>
            <id>create-installer</id>
            <phase>package</phase>
            <goals>
                <goal>exec</goal>
            </goals>
            <configuration>
                <executable>${java.home}/bin/jpackage</executable>
                <commandlineArgs>--type ${jpackage.type} --dest "${project.build.directory}/installer" --name "Frisian Draught" --icon "${icon.path}" --app-version "${app.version}" --module com.um_project_game/com.um_project_game.Launcher --module-path "${project.build.outputDirectory}:${project.build.directory}/mods:${java.home}/jmods" --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.swing,javafx.media</commandlineArgs>
            </configuration>
        </execution>
    </executions>
</plugin>
  </plugins>
  </build>
  <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <installer.type>dmg</installer.type>
                <icon.path>${project.build.directory}/classes/icons/Icon-mac.icns</icon.path>
            </properties>
        </profile>

        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <installer.type>exe</installer.type>
                <icon.path>${project.build.directory}/classes/icons/Icon-windows.ico</icon.path>
            </properties>
        </profile>

        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                    <name>!Mac OS X</name>
                </os>
            </activation>
            <properties>
            <installer.type>deb</installer.type> <!-- or rpm -->
                <icon.path>${project.build.directory}/classes/icons/Icon-linux.png</icon.path>
            </properties>
        </profile>
    </profiles>
</project>
